--- a/index.html
+++ b/index.html
@@ -922,11 +922,11 @@ v class="modal-content about">
       </div>
     </div>
   </div>
-  <div class="modal ab fade" id="counterPickMdl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal ab fade" id="Filtering" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
         <div class="modal-header">
-          <span class="project-title">Counterpick</span>
+          <span class="project-title">Analysis of E-commerce Online Retail dataset to perform Market Basket and Item-based Collaborative Filtering</span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body about">
@@ -934,27 +934,23 @@ v class="modal-content about">
 
             <div class="about-inner">
               <div class="col-md-6">
-                <img src="images/b3.jpg" class="project-img" alt="about" />
+                <img src="images/filtering.png" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
                 <ul>
-                  <li><strong>Project</strong> : Counterpick</li>
-                  <li><strong>Team Size</strong> : 5</li>
-                  <li><strong>Client</strong> : Urban Gutsav</li>
-                  <li><strong>Duration</strong> : Aug 2017 - Nov 2017</li>
-                  <li><strong>Technologies</strong>: VueJS, NodeJS and MySQL</li>
-                  <li><strong>Servers </strong>: Apache on Linux</li>
+                  <div class="categories">R Programming, Recommendation Systems, Machine Learning</div>
                 </ul>
               </div>
             </div>
             <div class="clearfix"></div>
             <div class="about-inner">
-              <div class="project-title my-responsibilit">My Responsibilities</div>
+              <div class="project-title my-responsibilit">Why a recommender system?</div>
               <ul>
-                <li>Design UI and front end functionality using VueJS.</li>
-                <li>Written Ajax calls using Axios to get data from Rest API’s.</li>
-                <li>Error handling and displaying notifications.</li>
-                <li>Setup Dev and staging environments.</li>
+                <li>To improve the sales of online e-commerce website using historical customer data to derive association rules and finding products to group together</li>
+				<li>To generate a list of top items strongly associated with a particular basket</li>
+				<li>To suggest new items to a customer using item-based collaborative filtering based on his transactional history</li>
+				<li>To draw conclusions and make necessary suggestions</li>
+                
               </ul>
             </div>
 
