--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta name="keywords" content="Gowri Dath Resume Portfolio Preface Responsive web template, Data Science Portfolio, Business Intelligence, Business Analytics,
 Python, R-Programming, Tableau, AWS" />
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/profile.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
@@ -882,7 +882,10 @@ v class="modal-content about">
                 <img src="images/folgers.jpg" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
+			  <ul>
 			  <div class="categories">SAS, Statistical Analysis, Predictive Analytics</div>
+			  </ul>
+			  </div>
                 <p class="left-align">Developed robust marketing strategy to increase revenues of Folgers Coffee Brand. This analysis presents the predictive and exploratory analysis performed with a goal to boost sales of Folgers and provide strategic insights to the marketing team. We have done series of studies and came up with actionable ideas presented in this
                  <a href="https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width/blob/master/SASProject_Group1(Documentation).pdf">report.
 				  <a href='https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width' class="read hvr-shutter-in-horizontal">GO TO REPO</a>'
