--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@ v class="modal-content about">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
         <div class="modal-header">
-          <span class="project-title">Folgers - Marketing Predictive Analytics</span>
+          <span class="project-title">Folgers - Marketing Predictive Analytics </span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body about">
@@ -882,22 +882,27 @@ v class="modal-content about">
                 <img src="images/folgers.jpg" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
-			  <ul>
-			  <div class="categories">SAS, Statistical Analysis, Predictive Analytics</div>
-			  </ul>
-			  </div>
-                <p class="left-align">Developed robust marketing strategy to increase revenues of Folgers Coffee Brand. This analysis presents the predictive and exploratory analysis performed with a goal to boost sales of Folgers and provide strategic insights to the marketing team. We have done series of studies and came up with actionable ideas presented in this
-                 <a href="https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width/blob/master/SASProject_Group1(Documentation).pdf">report.
-				  <a href='https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width' class="read hvr-shutter-in-horizontal">GO TO REPO</a>'
-                </p>
+                <ul>
+		  <div class="categories">SAS, Statistical Analysis, Predictive Analytics</div>
+                                    
+                </ul>
               </div>
             </div>
-            
+            <div class="clearfix"></div>
+            <div class="about-inner">
+              <div class="project-title my-responsibilit">Description</div>
+              <ul>
+                <li> Developed robust marketing strategy to increase revenues of Folgers Coffee Brand. This analysis presents the predictive and exploratory analysis performed with a goal to boost sales of Folgers and provide strategic insights to the marketing team. We have done series of studies and came up with actionable ideas presented in this <a href="https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width/blob/master/SASProject_Group1(Documentation).pdf">report.</li>
+				<a href='https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width' class="read hvr-shutter-in-horizontal">GO TO REPO</a>'
+              </ul>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
   </div>
+  
   <div class="modal ab fade" id="Filtering" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
