--- a/index.html
+++ b/index.html
@@ -338,7 +338,6 @@ Python, R-Programming, Tableau, AWS" />
               <li>Scrum</li>
               <li>Git</li>
               <li>Jira</li>
-			  <li>Kanban</li>
             </ul>
           </div>
           <div class="clearfix"> </div>
@@ -350,15 +349,20 @@ Python, R-Programming, Tableau, AWS" />
             </div>
           </div>-->
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4> Tools</h4>
+            <h4>Tools & Ids</h4>
             <ul class="news">
-			  <li>AWS(S3,EC2,VPC,RDS,Redshift,Athena)</li>
-              <li>Microsoft Excel</li>
-			  <ul class="news">
-              <li>SPSS</li>
-              <li>Google Data Studio</li>
-              </ul
-              </div>
+              <li>NetBeans</li>
+              <li>VSCode</li>
+              <li>Sublime Text</li>
+              <li>Notepad++</li>
+            </ul>
+            <ul class="news">
+              <li>Grunt</li>
+              <li>Bower</li>
+              <li>Webpack</li>
+              <li>Composer</li>
+            </ul>
+          </div>
           <div class="clearfix"> </div>
         </div>
         <div class="col-md-6 wthree_about_right_grid">
@@ -368,10 +372,12 @@ Python, R-Programming, Tableau, AWS" />
             </div>
           </div>-->
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4>Operating systems</h4>
+            <h4>Others</h4>
             <ul class="news">
-              <li>Windows</li>
-              <li>Unix(Linux)</li>
+              <li>Redis</li>
+              <li>AWS</li>
+              <li>E-Commerce</li>
+              <li>Windows & Linux</li>
             </ul>
           </div>
           <div class="clearfix"> </div>
